<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="item_main_placeholder_text_contact_data">+55 (13) 999777222</string>
    <string name="item_main_placeholder_text_contact_description">Phone number</string>
    <string name="item_main_content_description_icon">Item icon</string>
    <string name="str_dlg_actv_main_input_film">Movie name</string>
    <string name="str_dlg_actv_main_input_year">Year (optional)</string>
    <string name="str_dlg_actv_main_query_positive">Search</string>
    <string name="str_dlg_actv_main_query_negative">Dismiss</string>
    <string name="str_dlg_actv_main_query_message">Movies search</string>
    <string name="loading">Loading...</string>
    <string name="service_failure">Service error, try again later...</string>
    <string name="str_toast_no_movie">Movie not found</string>
    <string name="str_toast_movie_already">Movie already stored</string>
    <string name="title_activity_main">Zap Imoveis Test</string>
    <string name="app_name">Zap Android Dev Test</string>

    <string name="str_item_dorms">&#160;dorms</string>
    <string name="str_item_square_metre">&#160;m²</string>
    <string name="str_item_parking_spaces">&#160;CG</string>
    <string name="str_item_suite">&#160;suite</string>
    <string name="str_dialog_positive">OK</string>
    <string name="str_dialog_negative">Cancel</string>
    <string name="str_dialog_title_sort">Sort</string>
    <string name="str_detail_plot">Plot: \u0020</string>
    <string name="str_detail_year">Year: \u0020</string>
    <string name="str_detail_runtime">Runtime: \u0020</string>
    <string name="str_detail_country">Country: \u0020 </string>
    <string name="str_detail_director">Directors: \u0020 </string>
    <string name="str_detail_writer">Writer: \u0020 </string>
    <string name="str_detail_cast">Actors: \u0020</string>
    <string name="str_detail_imdb">Score e votes (imdb): \u0020</string>

    <string name="str_card_quatities_dorms">Dorms</string>
    <string name="str_card_quatities_suite">Suite(s)</string>
    <string name="str_card_quatities_cg">CG</string>
    <string name="str_card_quatities_area">Area(m²)</string>
    <string name="str_card_desc_carac">Characteristics</string>
    <string name="str_card_desc_desc">Description</string>
    <string name="str_card_sale_value">Sale value</string>
    <string name="str_card_desc_cond_tax"><![CDATA[<font color=\'lightgrey\'>Condominium fee:</font> <font color=\'grey\'>%1$s</font>]]></string>
    <string name="str_card_desc_meter_value"><![CDATA[<font color=\'lightgrey\'>Each m² value:</font> <font color=\'grey\'>%1$s</font>]]></string>
    <string name="str_card_other_realty_carac"><![CDATA[<font color=\'lightgrey\'>Realty characteristics:</font> <font color=\'grey\'>%1$s</font>]]></string>
    <string name="str_card_other_common_area_chara"><![CDATA[<font color=\'lightgrey\'>Common area characteristics:</font> <font color=\'grey\'>%1$s</font>]]></string>
    <string name="str_card_other_carac">Other characteristics</string>
    <string name="str_dialog_form_email" >E-Mail</string>
    <string name="str_dialog_form_back"  >Cancel</string>
    <string name="str_dialog_form_submit"  >Send</string>
    <string name="str_dialog_form_name"  >Name</string>
    <string name="str_dialog_form_phone"  >Phone</string>
    <string name="validation_error_wrong_phone">Invalid phone</string>
    <string name="validation_error_wrong_name">Invalid name</string>
    <string name="validation_error_empty_mail">Invalid e-mail</string>
    <string name="str_delivered_message">Your message was sent.</string>
    <string name="str_dialog_form_comment">Comment</string>
    <string name="validation_error_wrong_comment">Too short input</string>
    <string name="validation_error_empty">Required field</string>
    <string name="str_card_get_in_touch">Contact</string>
    <string name="maps_not_installed">Google Maps is not available on your device</string>
    <string name="tv_fullscreen_gallery_nothing_to_show">Nothing to show</string>

    <string-array name="sort_options">
        <item>Dormitories</item>
        <item>Lower value</item>
        <item>Highest value</item>
        <item>Total area</item>
    </string-array>

</resources>
