<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/detail_cardCornerRadius"
    app:cardElevation="@dimen/detail_cardElevation"
    app:contentPadding="@dimen/detail_contentPadding"
    app:cardUseCompatPadding="true"
    android:id="@+id/card_other_realty_charact"
    >


        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/imageView1"
            android:layout_toStartOf="@+id/imageView1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="right"
                android:src="@drawable/ic_editor_format_align_right"
                android:layout_marginRight="16dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/str_card_other_carac"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_card_other_realty"
                    android:text= "@string/str_card_other_realty_carac"/>
                <TextView
                    android:id="@+id/text_card_other_common"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "@string/str_card_other_common_area_chara"/>
            </LinearLayout>
        </LinearLayout>
</android.support.v7.widget.CardView>